# chatto-bot

./: .gitignore  README.md  chatto-bot.yaml  pyproject.toml
examples/: testbot.py
plugins/: admin.py  help.py  ping.py  remind.py
scripts/: buf.gen.python.yaml  gen-proto.sh  smoke_import.py
src/chatto_bot/: __init__.py  __main__.py  _queries.py  bot.py  client.py  cog.py  command.py  config.py  context.py  event.py  hydrate.py  middleware.py  realtime.py  subscription.py  timestamps.py  transport.py  types.py  usercache.py  version.py
src/chatto_bot/_pb/buf/validate/: validate_pb.py
src/chatto_bot/_pb/chatto/admin/v1/: diagnostics_connect.py  diagnostics_pb.py  event_log_connect.py  event_log_pb.py  members_connect.py  members_pb.py  permissions_connect.py  permissions_pb.py  roles_connect.py  roles_pb.py  room_layout_connect.py  room_layout_pb.py  server_connect.py  server_pb.py
src/chatto_bot/_pb/chatto/api/v1/: account_connect.py  account_pb.py  asset_uploads_connect.py  asset_uploads_pb.py  attachments_connect.py  attachments_pb.py  common_pb.py  external_identities_pb.py  link_previews_pb.py  member_directory_connect.py  member_directory_pb.py  message_types_pb.py  messages_connect.py  messages_pb.py  notification_preferences_connect.py  notification_preferences_pb.py  notifications_connect.py  notifications_pb.py  roles_pb.py  (+24 more)
tests/: conftest.py  test_bot.py  test_client.py  test_command.py  test_config.py  test_context.py  test_event.py  test_middleware.py  test_realtime.py  test_realtime_dispatch.py  test_remind.py  test_timestamps.py  test_types.py
(+5 files in other folders)
