[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chatto-bot"
dynamic = ["version"]
description = "Python bot framework for Chatto"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/chatto_bot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chatto_bot"]
